Testfall angepasst